--- a/_data/treatments.yml
+++ b/_data/treatments.yml
@@ -1,23 +1,24 @@
-- icon: icon-user-md
-  title: Invisible braces
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam minima, itaque molestiae ut ratione unde?
+- icon: icon-chain
+  title: Aparelho Metálico
+  description: bla bla bla
+
+- icon: icon-star-o
+  title: Aparelho Estetico
+  description: bla bla bla
+
+- icon: icon-heart-o
+  title: Ortodontia Lingual
+  description: bla bla bla
 
 - icon: icon-diamond
-  title: Cosmetic Dentistry
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam minima, itaque molestiae ut ratione unde?
+  title: Aparelho Invisalign
+  description: bla bla bla
 
-- icon: icon-flask
-  title: Stain removal
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-
-- icon: icon-globe
-  title: Dentures
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam minima, itaque molestiae ut ratione unde?
-
-- icon: icon-ambulance
-  title: Emergency Calls
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam minima, itaque molestiae ut ratione unde?
+- icon: icon-medkit
+  title: Disfunção Temporo Mandibular
+  description: bla bla bla
 
 - icon: icon-bed
-  title: Sedation
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam minima, itaque molestiae ut ratione unde?
+  title: Apneia e Ronco
+  description: bla bla bla  
+
