--- a/_data/treatments.yml
+++ b/_data/treatments.yml
@@ -1,24 +1,24 @@
 - icon: icon-chain
   title: Aparelho Metálico
-  description: bla bla bla
+  description: Bráquetes de aço inoxidável, bem mais estéticos que os de antigamente.
 
 - icon: icon-star-o
   title: Aparelho Estetico
-  description: bla bla bla
+  description: Bráquetes de porcelana, cerâmica ou safira, populares entre adultos.
 
 - icon: icon-heart-o
   title: Ortodontia Lingual
-  description: bla bla bla
+  description: Os bráquetes simplesmente não aparecem! Estão colados no lado de trás dos dentes.
 
 - icon: icon-diamond
   title: Aparelho Invisalign
-  description: bla bla bla
+  description: Ortodontia sem bráquetes! As placas feitas sob medida e importadas são trocadas periodicamente.
 
 - icon: icon-medkit
-  title: Disfunção Temporo Mandibular
-  description: bla bla bla
+  title: Disfunção Têmporo Mandibular
+  description: Tratamento de problemas na articulação com aparelhos e botox.
 
 - icon: icon-bed
-  title: Apneia e Ronco
-  description: bla bla bla  
+  title: Apnéia e Ronco
+  description: Aparelhos intrabucais removíveis para liberar a passagem de ar durante o sono.
 
