--- a/_data/treatments.yml
+++ b/_data/treatments.yml
@@ -3,7 +3,7 @@
   description: Bráquetes de aço inoxidável, bem mais estéticos que os de antigamente.
 
 - icon: icon-star-o
-  title: Aparelho Estetico
+  title: Aparelho Estético
   description: Bráquetes de porcelana, cerâmica ou safira, populares entre adultos.
 
 - icon: icon-heart-o
