--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ map:
     address_details: img/logo_vivian_small.png #svg/min/logo.svg
 
 # Social settings
-facebook: https://www.facebook.com/vivianorto/
+facebook: https://www.facebook.com/vivianledurortodontista/
 # twitter: http://twitter.com
 instagram: https://www.instagram.com/vivianortodontista/
 #youtube: http://youtube.com
