--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ map:
 # Social settings
 facebook: https://www.facebook.com/vivianledurortodontista/
 # twitter: http://twitter.com
-instagram: https://www.instagram.com/vivianortodontista/
+instagram: https://www.instagram.com/vivianledurortodontista/
 #youtube: http://youtube.com
 #skype: skype:obaez_design?userinfo
 feed: yes
