--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ contact:
     phone: (53) 3027-7966 / 98414-1552 (Whatsapp)
     phone2: (53) 3227-3750
     #emergency: 931 53 234
-    email: contato@vivazespacodesaude.com.br
+    email: vivianledurortodontista@gmail.com
     address: <b>Vivaz Espaço de Saúde</b> <br> R. Anchieta, 3069 <br> Pelotas, RS
     address2: <b>Spazio Sorrir</b><br> R. Barão de Santa Tecla, 583<br> Pelotas, RS
 
